fixed bugs added spring restdocs tests made endpoints better by creating custom objects laws now pass "contentString" which can be used for a short string representation of a law